[package]
name = "terragenr"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
log = "0.4.33"
sdl3 = "0.18.4"
sdl3-sys = "0.6.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
stderrlog = "0.6.0"
validator = { version = "0.20.0", features = ["derive"] }
